# motivator

./: Cargo.toml  README.md  malformed_quotes.json  quotes.json  quotes.txt
src/: lib.rs  main.rs  quotes.rs
tests/: lib.rs
