[package]
name = "motivator"
description = "Indulge in some motivation++ via random quote(s) from a JSON file."
version = "0.5.9"
edition = "2021"
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/developerish/motivator"
repository = "https://github.com/developerish/motivator"
keywords = ["cli", "motivation"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.13", features = ["derive"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.86"

[dev-dependencies]
assert_cmd = "2.0.5"
assert_fs = "1.0.7"
predicates = "2.1.1"
